--- a/css/OverallLayout.css
+++ b/css/OverallLayout.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: "Open Sans";
+  src: url(/fonts/OpenSans-VariableFont_wdth\,wght.ttf)
+    format("truetype-variations");
+  font-weight: 125 950;
+  font-stretch: 75% 125%;
+  font-style: normal;
+}
+
 /* Variables */
 :root {
   --primary: #8c38ff;
@@ -12,37 +21,4 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Fira sans", sans-serif;
-}
-
-/* Overall grid for website */
-article {
-  height: 100vh;
-
-  /* grid container settings */
-  display: grid;
-  grid-template:
-    "header" auto
-    "main" 1fr
-    / 1fr;
-}
-article > header {
-  grid-area: header;
-  /* For safari */
-  position: -webkit-sticky;
-
-  position: sticky;
-  top: 0;
-
-  transform: translateZ(0);
-  -moz-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  -o-transform: translateZ(0);
-  -webkit-transform: translateZ(0);
-
-  border-bottom: 3px solid var(--primary);
-}
-article > main {
-  grid-area: main;
-  overflow: auto;
-  padding: 1rem;
 }
